--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bad-words": "^3.0.2",
     "express": "^4.16.4",
+    "express-rate-limit": "^3.4.1",
     "monk": "^6.0.6",
     "morgan": "^1.9.1"
   }
